Added borders for vertical rhythm

--- a/assets/stylesheets/source/settings/_vertical-rhythm-ref.scss
+++ b/assets/stylesheets/source/settings/_vertical-rhythm-ref.scss
@@ -142,55 +142,55 @@
 
 
 
-// Apply leading whitespace. The $property can be margin or padding.
-@mixin leader($lines: 1, $font-size: $base-font-size, $property: margin) {
-  #{$property}-top: rhythm($lines, $font-size);
-}
+// // Apply leading whitespace. The $property can be margin or padding.
+// @mixin leader($lines: 1, $font-size: $base-font-size, $property: margin) {
+//   #{$property}-top: rhythm($lines, $font-size);
+// }
 
-// Apply leading whitespace as padding.
-@mixin padding-leader($lines: 1, $font-size: $base-font-size) {
-  padding-top: rhythm($lines, $font-size);
-}
+// // Apply leading whitespace as padding.
+// @mixin padding-leader($lines: 1, $font-size: $base-font-size) {
+//   padding-top: rhythm($lines, $font-size);
+// }
 
-// Apply leading whitespace as margin.
-@mixin margin-leader($lines: 1, $font-size: $base-font-size) {
-  margin-top: rhythm($lines, $font-size);
-}
+// // Apply leading whitespace as margin.
+// @mixin margin-leader($lines: 1, $font-size: $base-font-size) {
+//   margin-top: rhythm($lines, $font-size);
+// }
 
-// Apply trailing whitespace. The $property can be margin or padding.
-@mixin trailer($lines: 1, $font-size: $base-font-size, $property: margin) {
-  #{$property}-bottom: rhythm($lines, $font-size);
-}
+// // Apply trailing whitespace. The $property can be margin or padding.
+// @mixin trailer($lines: 1, $font-size: $base-font-size, $property: margin) {
+//   #{$property}-bottom: rhythm($lines, $font-size);
+// }
 
-// Apply trailing whitespace as padding.
-@mixin padding-trailer($lines: 1, $font-size: $base-font-size) {
-  padding-bottom: rhythm($lines, $font-size);
-}
+// // Apply trailing whitespace as padding.
+// @mixin padding-trailer($lines: 1, $font-size: $base-font-size) {
+//   padding-bottom: rhythm($lines, $font-size);
+// }
 
-// Apply trailing whitespace as margin.
-@mixin margin-trailer($lines: 1, $font-size: $base-font-size) {
-  margin-bottom: rhythm($lines, $font-size);
-}
-
-
+// // Apply trailing whitespace as margin.
+// @mixin margin-trailer($lines: 1, $font-size: $base-font-size) {
+//   margin-bottom: rhythm($lines, $font-size);
+// }
 
 
 
 
 
-// Shorthand mixin to apply whitespace for top and bottom margins and padding.
-@mixin rhythm(
-  $leader: 0,
-  $padding-leader: 0,
-  $padding-trailer: 0,
-  $trailer: 0,
-  $font-size: $base-font-size
-) {
-  @include leader($leader, $font-size);
-  @include padding-leader($padding-leader, $font-size);
-  @include padding-trailer($padding-trailer, $font-size);
-  @include trailer($trailer, $font-size);
-}
+
+
+// // Shorthand mixin to apply whitespace for top and bottom margins and padding.
+// @mixin rhythm(
+//   $leader: 0,
+//   $padding-leader: 0,
+//   $padding-trailer: 0,
+//   $trailer: 0,
+//   $font-size: $base-font-size
+// ) {
+//   @include leader($leader, $font-size);
+//   @include padding-leader($padding-leader, $font-size);
+//   @include padding-trailer($padding-trailer, $font-size);
+//   @include trailer($trailer, $font-size);
+// }
 
 
 
