--- a/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
+++ b/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
@@ -162,11 +162,14 @@
 // ----------------------------------------------------------------------------
 
 // Apply a border and whitespace to any side without destroying the vertical
-// rhythm. The whitespace must be greater than the width of the border.
+// rhythm. The whitespace must be greater than the width of the border. Also,
+// the $width value must be in the same unit as $font-size-base
+
 @mixin apply-side-rhythm-border($side, $width: 1px, $lines: 1, $font-size: $font-size-base, $border-style: $default-border-style) {
   @if not relative-unit($font-size-base) and $font-size != $font-size-base {
     @warn "relative-unit($font-size-base) is false but a relative font size was passed to apply-side-rhythm-border";
   }
+
   border-#{$side}: {
     style: $border-style;
     width: $font-size-base * $width / $font-size;
@@ -179,6 +182,7 @@
   @if not relative-unit($font-size-base) and $font-size != $font-size-base {
     @warn "relative-unit($font-size-base) is false but a relative font size was passed to rhythm-borders";
   }
+
   border: {
     style: $border-style;
     width: $font-size-base * $width / $font-size;
