--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -22,16 +22,21 @@
 
 $font-size-medium: $font-size-base * 2;
 
-h1,
 p,
 .box {
   background: rgba(yellow, .25);
 }
 
-h1 {
-  @include type-scale($font-size-medium);
-  @include margin(1 0 2);
+@include headings() {
+  @include margin(1 0);
+  background: rgba(yellow, .25);
 }
+
+h1 { @include type-scale($font-size-xl); }
+h2 { @include type-scale($font-size-lg); }
+h3 { @include type-scale($font-size-md); }
+h4 { @include type-scale($font-size-base); }
+h5,h6 { @include type-scale($font-size-sm); }
 
 p {
   @include margin-bottom(2);
