--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -29,20 +29,22 @@ $font-family-code:     $monospace !default;
 
 // $em-base: the document's base font size in pixels.
 // $font-size-base: the default size for body text (paragraphs, lists, etc.).
-// The unit you set here (px, em, rem) will be your default type unit
+// The unit you set here (px, em, rem) will be your default type unit.
 // $rem-fallback: whether or not to include px fallback for rem (IE8 support)
+// If you're sizing with pixels and using the modular-scale function,
+// you'll need to round off the values to get px integers.
 
 $em-base:         18px;
-$font-size-base:  18px !default;
+$font-size-base:  1rem !default;
 $rem-fallback:    true !default;
 
-$font-size-xxl:   ceil(modular-scale($font-size-base,  4, $perfect-fourth)) !default;
-$font-size-xl:    ceil(modular-scale($font-size-base,  3, $perfect-fourth)) !default;
-$font-size-lg:    ceil(modular-scale($font-size-base,  2, $perfect-fourth)) !default;
-$font-size-md:    ceil(modular-scale($font-size-base,  1, $perfect-fourth)) !default;
-$font-size-base:  ceil(modular-scale($font-size-base,  0, $perfect-fourth)) !default;
-$font-size-sm:    ceil(modular-scale($font-size-base, -1, $perfect-fourth)) !default;
-$font-size-xs:    ceil(modular-scale($font-size-base, -2, $perfect-fourth)) !default;
+$font-size-xxl:   modular-scale($font-size-base,  4, $perfect-fourth) !default;
+$font-size-xl:    modular-scale($font-size-base,  3, $perfect-fourth) !default;
+$font-size-lg:    modular-scale($font-size-base,  2, $perfect-fourth) !default;
+$font-size-md:    modular-scale($font-size-base,  1, $perfect-fourth) !default;
+$font-size-base:  modular-scale($font-size-base,  0, $perfect-fourth) !default;
+$font-size-sm:    modular-scale($font-size-base, -1, $perfect-fourth) !default;
+$font-size-xs:    modular-scale($font-size-base, -2, $perfect-fourth) !default;
 
 // Vertical Rhythm
 // ----------------------------------------------------------------------------
