--- a/assets/stylesheets/source/settings/_debug.scss
+++ b/assets/stylesheets/source/settings/_debug.scss
@@ -19,7 +19,7 @@ $visual-grid-opacity:       0.5 !default;
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
 $visual-baseline:           true !default;
 $visual-baseline-color:     lightgreen !default;
-$visual-baseline-image:     "../images/baseline-grid.png" !default;
+$visual-baseline-image:     null !default;
 
 // Show a ruler at the top of the page to help visualize breakpoint presets.
 // They will be automatically updated based on your settings in breakpoints.scss
