--- a/assets/stylesheets/source/settings/_debug.scss
+++ b/assets/stylesheets/source/settings/_debug.scss
@@ -17,7 +17,7 @@ $visual-grid-opacity:       0.5 !default;
 
 // Visual baseline
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
-$visual-baseline:           true !default;
+$visual-baseline:           false !default;
 $visual-baseline-color:     lightgreen !default;
 $visual-baseline-image:     null !default;
 
