Change file heading style

--- a/assets/stylesheets/source/base/_code.scss
+++ b/assets/stylesheets/source/base/_code.scss
@@ -1,14 +1,6 @@
-
-// Title:      Code
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
-
-// Table of contents
-// ----------------------------------------------------------------------------
-
-// Variables
-// Base
+// ============================================================================
+// Code
+// ============================================================================
 
 // Variables
 // ----------------------------------------------------------------------------
