--- a/assets/stylesheets/source/base/_normalize.scss
+++ b/assets/stylesheets/source/base/_normalize.scss
@@ -1,21 +1,11 @@
+// ============================================================================
+// Normalize.css
+// ============================================================================
 
-// Title:      Normalize.css
 // Version:    2.1.3
 // Author:     Nicholas Gallagher & Jonathan Neal
-// Source:     git.io/normalize
+// Source:
 // License:    MIT License
-
-// Table of contents
-// ----------------------------------------------------------------------------
-
-// HTML5 display definitions
-// Base
-// Links
-// Typography
-// Embedded content
-// Figures
-// Forms
-// Tables
 
 // HTML5 display definitions
 // ----------------------------------------------------------------------------
