--- a/assets/stylesheets/source/base/_print.scss
+++ b/assets/stylesheets/source/base/_print.scss
@@ -1,5 +1,7 @@
+// ============================================================================
+// Print
+// ============================================================================
 
-// Title:      Print
 // Version:    4.3.0
 // Author:     Paul Irish
 // Source:     https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
