--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -1,10 +1,8 @@
+// ============================================================================
+// Scaffolding
+// ============================================================================
 
-// Title:      Scaffolding
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
-
-// Scaffolding if the base HTML structure that all web pages will have.
+// Scaffolding is the base HTML structure all web pages will have.
 
 // Reset the box-sizing
 *,
