--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -1,8 +1,6 @@
-
-// Title:      Base styles
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Base
+// ============================================================================
 
 // Base styles are almost exclusively single element selectors but could include
 // attribute selectors, pseudo-class selectors, child selectors or sibling
