--- a/assets/stylesheets/source/components/components.scss
+++ b/assets/stylesheets/source/components/components.scss
@@ -1,10 +1,6 @@
-
-// Title:         Components
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// ============================================================================
+// Components
+// ============================================================================
 
 // A component is a discrete, reuseable pattern that can be used throughout a
 // project without breaking. In general, avoid element selectors and IDs in
