--- a/assets/stylesheets/source/settings/_breakpoints.scss
+++ b/assets/stylesheets/source/settings/_breakpoints.scss
@@ -1,8 +1,6 @@
-
-// Title:      Breakpoint variables
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Breakpoint Variables
+// ============================================================================
 
 // Default screen size breakpoints to use with media queries. Variables shouldn't
 // be created for one-off adjustments (ex: `@include media(min-width 456px)`)
