--- a/assets/stylesheets/source/settings/_colors.scss
+++ b/assets/stylesheets/source/settings/_colors.scss
@@ -1,8 +1,6 @@
-
-// Title:      Colors
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Color Palette
+// ============================================================================
 
 // Color variables declared in hsl() to allow for easy adjusting w/o an image
 // editor. SASS will convert these values to HEX in the compiled CSS.
