--- a/assets/stylesheets/source/settings/_debug.scss
+++ b/assets/stylesheets/source/settings/_debug.scss
@@ -1,21 +1,17 @@
-
-// Title:      Debugging
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Debug Settings
+// ============================================================================
 
 // Debug mode will visually highlight any potential markup/accessibility quirks
 // in the browser. Set to `true` or `false`.
 $debug-mode:                true !default;
 
-// Visual grid
 // Set $visual-grid to true to make sure your site is lining up as expected
 $visual-grid:               false !default;
 $visual-grid-color:         $gray-light !default;
 $visual-grid-index:         back !default;
 $visual-grid-opacity:       0.5 !default;
 
-// Visual baseline
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
 $visual-baseline:           false !default;
 $visual-baseline-color:     lightgreen !default;
