--- a/assets/stylesheets/source/settings/_grid.scss
+++ b/assets/stylesheets/source/settings/_grid.scss
@@ -1,8 +1,6 @@
-
-// Title:      Grid settings
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Grid Settings
+// ============================================================================
 
 // Variables for Bourbon Neat grids
 // @source: http://neat.bourbon.io/docs/#variables
