--- a/assets/stylesheets/source/settings/_scaffolding.scss
+++ b/assets/stylesheets/source/settings/_scaffolding.scss
@@ -1,8 +1,6 @@
-
-// Title:      Scaffolding variables
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Scaffolding settings
+// ============================================================================
 
 $body-bg:               white;
 $highlight-color:       $brand-primary;
