--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -1,8 +1,6 @@
-
-// Title:      Type settings
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Type Settings
+// ============================================================================
 
 // @todo: lists: http://j.eremy.net/align-lists-flush-left/
 // @todo: Body line height should change based on how wide the content is.
