--- a/assets/stylesheets/source/settings/functions/_px-to-rel.scss
+++ b/assets/stylesheets/source/settings/functions/_px-to-rel.scss
@@ -1,8 +1,6 @@
-
-// Title:      Pixel to relative unit conversion
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// PX to Relative Unit
+// ============================================================================
 
 // Converts a pixel value into the value of $font-size-base. If unit($font-size-
 // base) is set to `px`, this function will simply return the value unmodified.
