--- a/assets/stylesheets/source/settings/mixins/_font-size.scss
+++ b/assets/stylesheets/source/settings/mixins/_font-size.scss
@@ -1,8 +1,6 @@
-
-// Title:      Font size
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Font Size
+// ============================================================================
 
 // This is just an alias for the rem mixin for better readability.
 // The units here could be in absolute or relative units.
