--- a/assets/stylesheets/source/settings/mixins/_headings.scss
+++ b/assets/stylesheets/source/settings/mixins/_headings.scss
@@ -1,8 +1,11 @@
+// ============================================================================
+// Headings selector
+// ============================================================================
 
-// Title:      Headings selector
-// Version:    0.12.2
-// Author:     Compass
-// Source:     http://github/com/andyra/proto
+// @source: http://compass-style.org/reference/compass/helpers/selectors/#append-selector
+// @version: 0.12.2
+
+// Shortcut to cycle through headings
 
 @mixin headings($from: 1, $to: 6){
   @for $i from $from through $to{
