--- a/assets/stylesheets/source/settings/mixins/_rem-fallback.scss
+++ b/assets/stylesheets/source/settings/mixins/_rem-fallback.scss
@@ -1,8 +1,6 @@
-
-// Title:      Rem with px fallback
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Rem with px Fallback
+// ============================================================================
 
 // Adds a pixel fallback for any rem values, leaves others as-is
 
