--- a/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
+++ b/assets/stylesheets/source/settings/mixins/_vertical-rhythm.scss
@@ -1,8 +1,10 @@
+// ============================================================================
+// Vertical Rhythm
+// ============================================================================
 
-// Title:      Vertical Rhythm
-// Version:    0.12.2
-// Author:     Compass
-// Source:     https://github.com/chriseppstein/compass/blob/stable/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss
+// Inspired and largely taken from the Compass framework
+// @source: http://compass-style.org/reference/compass/typography/vertical_rhythm/
+// @version: 0.12.2
 
 // Functions
 // ----------------------------------------------------------------------------
