--- a/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
+++ b/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
@@ -1,14 +1,9 @@
-
-// Title:      Visual Baseline
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Visual Baseline
+// ============================================================================
 
 // Displays a visual baseline grid to help debug.
 // @source: http://www.soholaunch.com/Blog.php?id=62
-// @todo: this probably isn't very robust (or accurate?) and might need to be
-// refactored. It might be interesting to make a pseudo element to position
-// behind or in front.
 
 @if $visual-baseline == true {
   body {
