--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -1,33 +1,28 @@
-
-// Title:      Component style variables
-// Version:    0.0.1
-// Author:     Andy Smith
-// Source:     http://github/com/andyra/proto
+// ============================================================================
+// Component Style Variables
+// ============================================================================
 
 // Generic style values that can be reused across your entire project. If a
 // variable applies only to a specific component, it should be placed at the top
 // of the component's .scss file.
 
-// @todo: the units here should be in rem or px instad of ems to allow for
-// consistent spacing across components.
-
 // Border radius
-$border-radius-base:         4px !default;
-$border-radius-lg:           6px !default;
-$border-radius-sm:           3px !default;
+$border-radius-base:         px-to-rel(4px) !default;
+$border-radius-lg:           px-to-rel(6px) !default;
+$border-radius-sm:           px-to-rel(3px) !default;
 
 // Padding
-$padding-base-vertical:      6px !default;
-$padding-base-horizontal:   12px !default;
+$padding-base-vertical:      px-to-rel(6px) !default;
+$padding-base-horizontal:    px-to-rel(12px) !default;
 
-$padding-lg-vertical:       10px !default;
-$padding-lg-horizontal:     16px !default;
+$padding-lg-vertical:        px-to-rel(10px) !default;
+$padding-lg-horizontal:      px-to-rel(16px) !default;
 
-$padding-sm-vertical:        5px !default;
-$padding-sm-horizontal:     10px !default;
+$padding-sm-vertical:        px-to-rel(5px) !default;
+$padding-sm-horizontal:      px-to-rel(10px) !default;
 
-$padding-xs-vertical:        1px !default;
-$padding-xs-horizontal:      5px !default;
+$padding-xs-vertical:        px-to-rel(1px) !default;
+$padding-xs-horizontal:      px-to-rel(5px) !default;
 
 // Active element colors
 $component-active-color:    #fff !default;
