--- a/assets/stylesheets/source/settings/functions/_absolute-unit.scss
+++ b/assets/stylesheets/source/settings/functions/_absolute-unit.scss
@@ -1,10 +1,10 @@
-
-// Title:      Absolute unit
-// Version:    0.12.2
-// Author:     Compass
-// Source:     http://compass-style.org/reference/compass/typography/vertical_rhythm/#function-absolute-unit
+// ============================================================================
+// Absolute Unit
+// ============================================================================
 
 // Returns true if a number has an absolute unit.
+// @source: http://compass-style.org/reference/compass/typography/vertical_rhythm/#function-absolute-unit
+// @version: 0.12.2
 
 @function absolute-unit($number) {
   @return not (relative-unit($number) or unitless($number));
