--- a/assets/stylesheets/source/settings/functions/_relative-unit.scss
+++ b/assets/stylesheets/source/settings/functions/_relative-unit.scss
@@ -1,10 +1,10 @@
-
-// Title:      Relative unit
-// Version:    0.12.2
-// Author:     Compass
-// Source:     http://compass-style.org/reference/compass/typography/vertical_rhythm/#function-relative-unit
+// ============================================================================
+// Relative Unit
+// ============================================================================
 
 // Returns true if a number has a relative unit.
+// @source: http://compass-style.org/reference/compass/typography/vertical_rhythm/#function-relative-unit
+// @version: 0.12.2
 
 @function relative-unit($number) {
   @return unit($number) == "%" or unit($number) == "em" or unit($number) == "rem";
